--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WowMarket</title>
+    <title>WoW Market</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" %>
+    <%= stylesheet_link_tag "https://cdn.datatables.net/v/bs5/jszip-2.5.0/dt-1.11.3/af-2.3.7/b-2.1.1/b-colvis-2.1.1/b-html5-2.1.1/b-print-2.1.1/cr-1.5.5/date-1.1.1/fc-4.0.1/fh-3.2.1/kt-2.6.4/r-2.2.9/rg-1.1.4/rr-1.2.8/sc-2.0.5/sb-1.3.0/sp-1.4.0/sl-1.3.4/sr-1.0.1/datatables.min.css" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <%= yield %>
+
+    <nav id="wm-menu" class="navbar navbar-expand navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">WoW Market</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/realms">Realms</a>
+            </li>
+          </ul>
+
+          <div data-controller="dropdown" class="dropdown">
+            <button selected_idx="<%= locale_idx[@locale.to_sym] %>" data-dropdown-target="submit" data-action="click->dropdown#submitClick" id="dropdown-submit-button" type="submit" class="btn btn-secondary"><%= locale_to_language[@locale.to_sym] %></button>
+            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+              <span class="visually-hidden">Toggle Dropdown</span>
+            </button>
+
+            <ul id="languages-dropdown" class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+              <% i = 0 -%>
+              <% languages.each do |language| -%>
+                <li>
+                  <label idx="<%= i %>" data-action="click->dropdown#selectClick" class="dropdown-item"><%= language %></label>
+                </li>
+              <% i += 1 -%>
+              <% end -%>
+            </ul>
+          </div>
+
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-light " type="submit">GO</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <div id="wm-content" class="container-sm">
+      <%= yield %>
+    </div>
+
   </body>
+
 </html>
