--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,12 +39,13 @@ body {
   width: 100%;
   padding-left: 25%;
   padding-right: 25%;
+  z-index: 100;
 }
 
 #wm-content {
     padding-top: 4%;
-    margin-left: 30%;
-    margin-right: 30%;
+    /* margin-left: 30%; */
+    /* margin-right: 30%; */
 }
 
 .page-link {
