--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,14 @@
           </ul>
 
           <div data-controller="dropdown" class="dropdown">
-            <button selected_idx="<%= locale_idx[@locale.to_sym] %>" data-dropdown-target="submit" data-action="click->dropdown#submitClick" id="dropdown-submit-button" type="submit" class="btn btn-secondary"><%= locale_to_language[@locale.to_sym] %></button>
-            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+            <button selected_idx="<%= locale_idx[@locale.to_sym] %>" data-dropdown-target="submit" data-action="click->dropdown#submitClick"
+              id="dropdown-submit-button" type="submit" class="btn btn-secondary dropdown-toggle"
+              data-bs-toggle="dropdown"><%= locale_to_language[@locale.to_sym] %></button>
+            <!-- <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
               <span class="visually-hidden">Toggle Dropdown</span>
-            </button>
+            </button> -->
 
-            <ul id="languages-dropdown" class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+            <ul id="languages-dropdown" class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdown-submit-button">
               <% i = 0 -%>
               <% languages.each do |language| -%>
                 <li>
